// protoc file autogenerated from OCaml type definitions
package Frontend_ir;

// frontend_ir.ml:19
message un_op {
  enum _tag {
    UnOpNot_tag = 1;
    UnOpNeg_tag = 2;
  }
  
  required _tag tag = 1;
}

// frontend_ir.ml:24
message bin_op {
  enum _tag {
    BinOpPlus_tag = 1;
    BinOpMinus_tag = 2;
    BinOpMult_tag = 3;
    BinOpIntDiv_tag = 4;
    BinOpRem_tag = 5;
    BinOpLessThan_tag = 6;
    BinOpLessThanEq_tag = 7;
    BinOpGreaterThan_tag = 8;
    BinOpGreaterThanEq_tag = 9;
    BinOpAnd_tag = 10;
    BinOpOr_tag = 11;
    BinOpEq_tag = 12;
    BinOpNotEq_tag = 13;
  }
  
  required _tag tag = 1;
}

// frontend_ir.ml:55
message type_expr {
  enum _tag {
    TEInt_tag = 1;
    TEClass_tag = 2;
    TEVoid_tag = 3;
    TEBool_tag = 4;
  }
  
  required _tag tag = 1;
  oneof value {
    string TEClass = 3;
  }
}

// frontend_ir.ml:68
message param {
  enum _tag {
    TParam_tag = 1;
  }
  
  // frontend_ir.ml:69
  message _TParam {
    required type_expr _0 = 1;
    required string _1 = 2;
  }
  
  required _tag tag = 1;
  oneof value {
    _TParam TParam = 2;
  }
}

// frontend_ir.ml:71
message identifier {
  enum _tag {
    Variable_tag = 1;
    ObjField_tag = 2;
  }
  
  // frontend_ir.ml:74
  message _ObjField {
    required string _0 = 1;
    required int64 _1 = 2;
  }
  
  required _tag tag = 1;
  oneof value {
    string Variable = 2;
    _ObjField ObjField = 3;
  }
}

// frontend_ir.ml:76
message expr {
  enum _tag {
    Integer_tag = 1;
    Boolean_tag = 2;
    Identifier_tag = 3;
    Constructor_tag = 4;
    Let_tag = 5;
    Assign_tag = 6;
    Consume_tag = 7;
    FunctionApp_tag = 8;
    Printf_tag = 9;
    FinishAsync_tag = 10;
    IfElse_tag = 11;
    WhileLoop_tag = 12;
    BinOp_tag = 13;
    UnOp_tag = 14;
  }
  
  // frontend_ir.ml:102
  message _Constructor {
    required string _0 = 1;
    repeated constructor_arg _1 = 2;
  }
  
  // frontend_ir.ml:102
  message _Let {
    required string _0 = 1;
    required expr _1 = 2;
  }
  
  // frontend_ir.ml:102
  message _Assign {
    required identifier _0 = 1;
    required expr _1 = 2;
  }
  
  // frontend_ir.ml:102
  message _FunctionApp {
    required string _0 = 1;
    required exprs _1 = 2;
  }
  
  // frontend_ir.ml:102
  message _Printf {
    required string _0 = 1;
    required exprs _1 = 2;
  }
  
  // frontend_ir.ml:102
  message _FinishAsync {
    repeated async_expr _0 = 1;
    required exprs _1 = 2;
  }
  
  // frontend_ir.ml:102
  message _IfElse {
    required expr _0 = 1;
    required exprs _1 = 2;
    required exprs _2 = 3;
  }
  
  // frontend_ir.ml:102
  message _WhileLoop {
    required expr _0 = 1;
    required exprs _1 = 2;
  }
  
  // frontend_ir.ml:102
  message _BinOp {
    required bin_op _0 = 1;
    required expr _1 = 2;
    required expr _2 = 3;
  }
  
  // frontend_ir.ml:102
  message _UnOp {
    required un_op _0 = 1;
    required expr _1 = 2;
  }
  
  required _tag tag = 1;
  oneof value {
    int64 Integer = 2;
    bool Boolean = 3;
    identifier Identifier = 4;
    _Constructor Constructor = 5;
    _Let Let = 6;
    _Assign Assign = 7;
    identifier Consume = 8;
    _FunctionApp FunctionApp = 9;
    _Printf Printf = 10;
    _FinishAsync FinishAsync = 11;
    _IfElse IfElse = 12;
    _WhileLoop WhileLoop = 13;
    _BinOp BinOp = 14;
    _UnOp UnOp = 15;
  }
}

// frontend_ir.ml:95
message exprs {
  repeated expr _ = 1;
}

// frontend_ir.ml:98
message async_expr {
  enum _tag {
    AsyncExpr_tag = 1;
  }
  
  required _tag tag = 1;
  oneof value {
    exprs AsyncExpr = 2;
  }
}

// frontend_ir.ml:101
message constructor_arg {
  enum _tag {
    ConstructorArg_tag = 1;
  }
  
  // frontend_ir.ml:102
  message _ConstructorArg {
    required int64 _0 = 1;
    required expr _1 = 2;
  }
  
  required _tag tag = 1;
  oneof value {
    _ConstructorArg ConstructorArg = 2;
  }
}

// frontend_ir.ml:106
message function_defn {
  enum _tag {
    TFunction_tag = 1;
  }
  
  // frontend_ir.ml:107
  message _TFunction {
    required string _0 = 1;
    required type_expr _1 = 2;
    repeated param _2 = 3;
    repeated expr _3 = 4;
  }
  
  required _tag tag = 1;
  oneof value {
    _TFunction TFunction = 2;
  }
}

// frontend_ir.ml:111
message class_defn {
  enum _tag {
    TClass_tag = 1;
  }
  
  // frontend_ir.ml:112
  message _TClass {
    required string _0 = 1;
    repeated type_expr _1 = 2;
  }
  
  required _tag tag = 1;
  oneof value {
    _TClass TClass = 2;
  }
}

// frontend_ir.ml:116
message program {
  enum _tag {
    Prog_tag = 1;
  }
  
  // frontend_ir.ml:117
  message _Prog {
    repeated class_defn _0 = 1;
    repeated function_defn _1 = 2;
    repeated expr _2 = 3;
  }
  
  required _tag tag = 1;
  oneof value {
    _Prog Prog = 2;
  }
}
